--- a/index.html
+++ b/index.html
@@ -3,16 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Green World</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
   <script src="./js/app.js" defer></script>
-  <title>Document</title>
 </head>
 <body>
-  <div id="app">
-  <!-- Vue App HTML Code -->
-  <p>substitutable tags {{ values[0] }} </p>
-    
-  </div>
+  <!-- Header -->
+  <header>
+  <!-- Navigation Menu -->
+    <nav>
+    </nav>
+  </header>
+
+  <!-- Main Content -->
+  <main>
+    <section>
+      <div id="app">
+      <!-- Vue App HTML Code -->
+      <p>substitutable tags {{ values[0] }} </p>
+        Hello
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+  </footer>
+
 </body>
 </html>
