--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
   <header>
   <!-- Navigation Menu -->
     <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#media">Media</a></li>
+        <li><a href="#media">Media</a></li>
+        <li><a href="#media">Media</a></li>
+        <li><a href="#media">Media</a></li>
+      </ul>
     </nav>
   </header>
 
