updated the website

--- a/index_rtl.html
+++ b/index_rtl.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green World - Togehter for a Greener World</title>
-    <!-- CSS & Logo -->
+    <title> عالم أخضر - معًا من أجل عالم أكثر خضرة.</title>
+    <!-- CSS & Logo-->
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="icon" type="image/x-icon" href="./img/logo_compressed.png">
     <!-- Bootstrap & Data Table -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- Javascript -->
     <script src="./js/app.js" defer></script>
     <!-- Bootstrap & Data Table -->
@@ -28,24 +26,23 @@
       <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="./img/logo.svg" alt="Logo" width="50" height="50" class="d-inline-block"> Green World </a>
+            <img src="./img/logo.svg" alt="Logo" width="50" height="50" class="d-inline-block " > عالم أخضر </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/index_rtl.html">عربي</a>
+                <a class="nav-link" href="/index.html">English</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#mission">Mission</a>
+                <a class="nav-link" href="#mission">بعثة</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#table">Table</a>
+                <a class="nav-link" href="#table">الطاولة</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#footer">Footer</a>
-              </li>
+                <a class="nav-link" href="#footer">تذييل</a>
             </ul>
           </div>
         </div>
@@ -55,262 +52,262 @@
     <!-- Main Content -->
     <main>
       <section id="mission">
-        <img class="img-fluid mx-auto d-block" src="/img/natur.jpg" alt="Nature">
-        <div class="h1 text-center">Our Mission</div>
-        <p class="text-center text-break fs-4">Founded more than two years ago, our non-profit organization was created to help both individuals and businesses adopt more environmentally sustainable practices. Our mission is to reduce the collective CO2 footprints of organizations of all sizes by providing easy access to accurate and up-to-date data on their regional emissions output. We also strive to inform, educate, and inspire companies to become better stewards of the environment. To this end, we have developed innovative tools and platforms that enable companies to track their emissions levels accurately over time, allowing them to better evaluate and understand their eco footprint, so they can make positive changes. Our team consists of highly qualified experts with a wide range of knowledge in environmental science, engineering, business strategy, data analytics and research methods who work together in a collaborative environment driven by ambition and passion for making the world a better place. </p>
-        <p class="text-center text-break fs-4">We are constantly looking for new opportunities to drive innovation and create meaningful relationships with organizations from all sectors, as well as engaging them in discussions about global warming prevention initiatives. As part of our commitment to corporate social responsibility, we also offer educational programs for employees from various industries which focus on understanding climate change trends, reducing personal carbon footprints, best practices for green living, renewable energy sources and more.</p>
-        <img class="img-fluid mx-auto d-block" src="/img/meeresschildkroete.jpg" alt="Sea Turtle">
-        <p class="text-center text-break fs-4">Without furder ado, let's dive into the interesting part: The data about the biggest companies of countries with the highest greenhouse gas emissions and their annual CO2 emissions.</p>
+        <img class="img-fluid mx-auto d-block" src="/img/natur.jpg" alt="طبيعة سجية">
+        <div class="h1 text-center">مهمتنا</div>
+        <p class="text-center text-break fs-4">تأسست منذ أكثر من عامين ، تم إنشاء منظمتنا غير الربحية لمساعدة كل من الأفراد والشركات على تبني ممارسات أكثر استدامة بيئيًا. مهمتنا هي تقليل البصمات الجماعية لثاني أكسيد الكربون للمؤسسات من جميع الأحجام من خلال توفير وصول سهل إلى بيانات دقيقة ومحدثة حول مخرجات الانبعاثات الإقليمية الخاصة بهم. نسعى أيضًا إلى إعلام الشركات وتثقيفها وإلهامها لتصبح مشرفًا أفضل على البيئة. تحقيقًا لهذه الغاية ، قمنا بتطوير أدوات ومنصات مبتكرة تمكن الشركات من تتبع مستويات انبعاثاتها بدقة بمرور الوقت ، مما يسمح لهم بتقييم وفهم بصمتهم البيئية بشكل أفضل ، حتى يتمكنوا من إجراء تغييرات إيجابية. يتكون فريقنا من خبراء مؤهلين تأهيلاً عالياً مع مجموعة واسعة من المعرفة في العلوم البيئية والهندسة واستراتيجية الأعمال وتحليلات البيانات وأساليب البحث الذين يعملون معًا في بيئة تعاونية مدفوعة بالطموح والشغف لجعل العالم مكانًا أفضل.</p>
+        <p class="text-center text-break fs-4">نحن نبحث باستمرار عن فرص جديدة لدفع الابتكار وخلق علاقات هادفة مع المنظمات من جميع القطاعات ، فضلا عن إشراكهم في المناقشات حول مبادرات الوقاية من الاحتباس الحراري. كجزء من التزامنا بالمسؤولية الاجتماعية للشركات ، نقدم أيضًا برامج تعليمية للموظفين من مختلف الصناعات التي تركز على فهم اتجاهات تغير المناخ ، والحد من انبعاثات الكربون الشخصية ، وأفضل الممارسات للحياة الخضراء ، ومصادر الطاقة المتجددة والمزيد.</p>
+        <img class="img-fluid mx-auto d-block" src="/img/meeresschildkroete.jpg" alt="سلحفاة">
+        <p class="text-center text-break fs-4">دون مزيد من اللغط ، دعنا نتعمق في الجزء المثير للاهتمام: البيانات الخاصة بأكبر الشركات في البلدان التي لديها أعلى انبعاثات غازات الاحتباس الحراري وانبعاثاتها السنوية من ثاني أكسيد الكربون.</p>
       </section>
-      <div class="h1 text-center">The Table</div>
+      <div class="h1 text-center">الطاولة</div>
       <section id="table">
         <article>
           <table id="co2" class="table table-striped" style="width:100%">
             <thead>
               <tr>
-                <th>Country</th>
-                <th>Company</th>
-                <th>Annual CO2 emissions (in t)</th>
+                <th>دولة</th>
+                <th>شركة</th>
+                <th>انبعاثات ثاني أكسيد الكربون السنوية (بالطن)</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>Albania</td>
+                <td>ألبانيا</td>
                 <td>Grecon</td>
                 <td>1843505</td>
               </tr>
               <tr>
-                <td>Albania</td>
+                <td>ألبانيا</td>
                 <td>Rewo</td>
                 <td>4001334</td>
               </tr>
               <tr>
-                <td>Bermuda</td>
+                <td>برمودا</td>
                 <td>Alpak</td>
                 <td>213297</td>
               </tr>
               <tr>
-                <td>Bermuda</td>
+                <td>برمودا</td>
                 <td>Hiem</td>
                 <td>195470</td>
               </tr>
               <tr>
-                <td>Bhutan</td>
+                <td>بوتان</td>
                 <td>Nioqp</td>
                 <td>2464</td>
               </tr>
               <tr>
-                <td>Bhutan</td>
+                <td>بوتان</td>
                 <td>Feru</td>
                 <td>868412</td>
               </tr>
               <tr>
-                <td>Chile</td>
+                <td>تشيلي</td>
                 <td>Opao</td>
                 <td>8152414</td>
               </tr>
               <tr>
-                <td>Chile</td>
+                <td>تشيلي</td>
                 <td>Anqy</td>
                 <td>63502169</td>
               </tr>
               <tr>
-                <td>China</td>
+                <td>الصين</td>
                 <td>Choam</td>
                 <td>9431227812</td>
               </tr>
               <tr>
-                <td>China</td>
+                <td>الصين</td>
                 <td>Acme Corp</td>
                 <td>10003877188</td>
               </tr>
               <tr>
-                <td>Cuba</td>
+                <td>كوبا</td>
                 <td>Sirius </td>
                 <td>12787483</td>
               </tr>
               <tr>
-                <td>Cuba</td>
+                <td>كوبا</td>
                 <td>Cybernetics </td>
                 <td>14094633</td>
               </tr>
               <tr>
-                <td>Finland</td>
+                <td>فنلندا</td>
                 <td>MomCorp</td>
                 <td>731239</td>
               </tr>
               <tr>
-                <td>Finland</td>
+                <td>فنلندا</td>
                 <td>Rich Industries</td>
                 <td>29479657</td>
               </tr>
               <tr>
-                <td>France</td>
+                <td>فرنسا</td>
                 <td>Soylent Corp.</td>
                 <td>158519924</td>
               </tr>
               <tr>
-                <td>France</td>
+                <td>فرنسا</td>
                 <td>Frobozz Magic Co.</td>
                 <td>33672567</td>
               </tr>
               <tr>
-                <td>Germany</td>
+                <td>ألمانيا</td>
                 <td>Warbucks Industries</td>
                 <td>336089298</td>
               </tr>
               <tr>
-                <td>Germany</td>
+                <td>ألمانيا</td>
                 <td>Tyrell Corp.</td>
                 <td>316269625</td>
               </tr>
               <tr>
-                <td>Ghana</td>
+                <td>غانا</td>
                 <td>Wayne Enterprises</td>
                 <td>12103002</td>
               </tr>
               <tr>
-                <td>Ghana</td>
+                <td>غانا</td>
                 <td>Virtucon</td>
                 <td>3024230</td>
               </tr>
               <tr>
-                <td>Liechtenstein</td>
+                <td>ليختنشتاين</td>
                 <td>Globex</td>
                 <td>27411</td>
               </tr>
               <tr>
-                <td>Liechtenstein</td>
+                <td>ليختنشتاين</td>
                 <td>Umbrella Corp.</td>
                 <td>15403</td>
               </tr>
               <tr>
-                <td>Lithuania</td>
+                <td>ليتوانيا</td>
                 <td>Wonka Industries</td>
                 <td>8257807</td>
               </tr>
               <tr>
-                <td>Lithuania</td>
+                <td>ليتوانيا</td>
                 <td>Stark Industries</td>
                 <td>3358560</td>
               </tr>
               <tr>
-                <td>Luxembourg</td>
+                <td>لوكسمبورغ</td>
                 <td>Clampett Oil</td>
                 <td>4043975</td>
               </tr>
               <tr>
-                <td>Luxembourg</td>
+                <td>لوكسمبورغ</td>
                 <td>Oceanic Airlines</td>
                 <td>7779714</td>
               </tr>
               <tr>
-                <td>Macao</td>
+                <td>ماكاو</td>
                 <td>Yoyodyne</td>
                 <td>984474</td>
               </tr>
               <tr>
-                <td>Macao</td>
+                <td>ماكاو</td>
                 <td>Propulsion Sys.</td>
                 <td>180316</td>
               </tr>
               <tr>
-                <td>Namibia</td>
+                <td>ناميبيا</td>
                 <td>Cyberdyne</td>
                 <td>3352456</td>
               </tr>
               <tr>
-                <td>Namibia</td>
+                <td>ناميبيا</td>
                 <td>Systems Corp.</td>
                 <td>1025373</td>
               </tr>
               <tr>
-                <td>Nigeria</td>
+                <td>نيجيريا</td>
                 <td>Danconia Copper</td>
                 <td>95264656</td>
               </tr>
               <tr>
-                <td>Nigeria</td>
+                <td>نيجيريا</td>
                 <td>Gringotta</td>
                 <td>105453306</td>
               </tr>
               <tr>
-                <td>Portugal</td>
+                <td>البرتغال</td>
                 <td>Oscorp</td>
                 <td>5144691</td>
               </tr>
               <tr>
-                <td>Portugal</td>
+                <td>البرتغال</td>
                 <td>Nakatomi</td>
                 <td>1769340</td>
               </tr>
               <tr>
-                <td>Spain</td>
+                <td>إسبانيا</td>
                 <td>Trading Corp</td>
                 <td>87789611</td>
               </tr>
               <tr>
-                <td>Spain</td>
+                <td>إسبانيا</td>
                 <td>Spacely</td>
                 <td>31974040</td>
               </tr>
               <tr>
-                <td>Sweden</td>
+                <td>السويد</td>
                 <td>Space Industries</td>
                 <td>20507139</td>
               </tr>
               <tr>
-                <td>Sweden</td>
+                <td>السويد</td>
                 <td>Sprockets Co.</td>
                 <td>16766576</td>
               </tr>
               <tr>
-                <td>Switzerland</td>
+                <td>سويسرا</td>
                 <td>Money Industries</td>
                 <td>21514726</td>
               </tr>
               <tr>
-                <td>Switzerland</td>
+                <td>سويسرا</td>
                 <td>Evil Corp.</td>
                 <td>31967737</td>
               </tr>
               <tr>
-                <td>Ukraine</td>
+                <td>أوكرانيا</td>
                 <td>Bottogo</td>
                 <td>163562356</td>
               </tr>
               <tr>
-                <td>Ukraine</td>
+                <td>أوكرانيا</td>
                 <td>Venetia Co.</td>
                 <td>98697214</td>
               </tr>
               <tr>
-                <td>United Arab Emirates</td>
+                <td>الإمارات العربية المتحدة</td>
                 <td>Oil Giant</td>
                 <td>106082338</td>
               </tr>
               <tr>
-                <td>United Arab Emirates</td>
+                <td>الإمارات العربية المتحدة</td>
                 <td>United Oil</td>
                 <td>35867604</td>
               </tr>
               <tr>
-                <td>United Kingdom</td>
+                <td>المملكة المتحدة</td>
                 <td>Arts Ltd.</td>
                 <td>265938262</td>
               </tr>
               <tr>
-                <td>United Kingdom</td>
+                <td>المملكة المتحدة</td>
                 <td>Banking Group</td>
                 <td>779408</td>
               </tr>
               <tr>
-                <td>United States</td>
+                <td>الولايات المتحدة الأمريكية</td>
                 <td>Very Big Corp. Of America</td>
                 <td>830410295</td>
               </tr>
               <tr>
-                <td>United States</td>
+                <td>الولايات المتحدة الأمريكية</td>
                 <td>Dieselmotors Co.</td>
                 <td>4317396080</td>
               </tr>
@@ -319,14 +316,14 @@
         </article>
       </section>
       <section>
-        <img class="img-fluid mx-auto d-block" src="/img/landschaft.jpg" alt="Landscape">
-        <p class="text-center text-break fs-4">We hope this data shed some light upon the worldwide greenhouse gas emissions. Let's all work together towards a sustainable future because this planet is worth fighting for!</p>
+        <img class="img-fluid mx-auto d-block" src="/img/landschaft.jpg" alt="طبيعيه">
+        <p class="text-center text-break fs-4">نأمل أن تلقي هذه البيانات بعض الضوء على انبعاثات غازات الاحتباس الحراري في جميع أنحاء العالم. دعونا نعمل جميعًا معًا من أجل مستقبل مستدام لأن هذا الكوكب يستحق القتال من أجله!</p>
       </section>
     </main>
 
     <!-- Footer -->
     <footer id="footer">
-      <!-- Contact -->
+    <!-- Contact -->
       <section class="bg-dark text-white pt-5 mt-5">
         <section class="container py-4 py-md-5 px-4 px-md-3">
           <div class="row text-md-left">
@@ -363,7 +360,7 @@
           <!-- Section: Text -->
           <section class="mb-4">
             <p>
-              Green World - Together for a Greener World.
+              عالم أخضر - معًا من أجل عالم أكثر خضرة.
             </p>
           </section>
         </div>
@@ -375,6 +372,5 @@
         </div>
       </section>
     </footer>
-
   </body>
 </html>
