Fixed paths to images

--- a/index_rtl.html
+++ b/index_rtl.html
@@ -6,7 +6,7 @@
     <title> عالم أخضر - معًا من أجل عالم أكثر خضرة.</title>
     <!-- CSS & Logo-->
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="icon" type="image/x-icon" href="./img/logo_compressed.png">
+    <link rel="icon" type="image/x-icon" href="img/logo_compressed.png">
     <!-- Bootstrap & Data Table -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css">
@@ -26,7 +26,7 @@
       <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="./img/logo.svg" alt="Logo" width="50" height="50" class="d-inline-block " > عالم أخضر </a>
+            <img src="img/logo.svg" alt="Logo" width="50" height="50" class="d-inline-block " > عالم أخضر </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -52,11 +52,11 @@
     <!-- Main Content -->
     <main>
       <section id="mission">
-        <img class="img-fluid mx-auto d-block" src="/img/natur.jpg" alt="طبيعة سجية">
+        <img class="img-fluid mx-auto d-block" src="img/natur.jpg" alt="طبيعة سجية">
         <div class="h1 text-center">مهمتنا</div>
         <p class="text-center text-break fs-4">تأسست منذ أكثر من عامين ، تم إنشاء منظمتنا غير الربحية لمساعدة كل من الأفراد والشركات على تبني ممارسات أكثر استدامة بيئيًا. مهمتنا هي تقليل البصمات الجماعية لثاني أكسيد الكربون للمؤسسات من جميع الأحجام من خلال توفير وصول سهل إلى بيانات دقيقة ومحدثة حول مخرجات الانبعاثات الإقليمية الخاصة بهم. نسعى أيضًا إلى إعلام الشركات وتثقيفها وإلهامها لتصبح مشرفًا أفضل على البيئة. تحقيقًا لهذه الغاية ، قمنا بتطوير أدوات ومنصات مبتكرة تمكن الشركات من تتبع مستويات انبعاثاتها بدقة بمرور الوقت ، مما يسمح لهم بتقييم وفهم بصمتهم البيئية بشكل أفضل ، حتى يتمكنوا من إجراء تغييرات إيجابية. يتكون فريقنا من خبراء مؤهلين تأهيلاً عالياً مع مجموعة واسعة من المعرفة في العلوم البيئية والهندسة واستراتيجية الأعمال وتحليلات البيانات وأساليب البحث الذين يعملون معًا في بيئة تعاونية مدفوعة بالطموح والشغف لجعل العالم مكانًا أفضل.</p>
         <p class="text-center text-break fs-4">نحن نبحث باستمرار عن فرص جديدة لدفع الابتكار وخلق علاقات هادفة مع المنظمات من جميع القطاعات ، فضلا عن إشراكهم في المناقشات حول مبادرات الوقاية من الاحتباس الحراري. كجزء من التزامنا بالمسؤولية الاجتماعية للشركات ، نقدم أيضًا برامج تعليمية للموظفين من مختلف الصناعات التي تركز على فهم اتجاهات تغير المناخ ، والحد من انبعاثات الكربون الشخصية ، وأفضل الممارسات للحياة الخضراء ، ومصادر الطاقة المتجددة والمزيد.</p>
-        <img class="img-fluid mx-auto d-block" src="/img/meeresschildkroete.jpg" alt="سلحفاة">
+        <img class="img-fluid mx-auto d-block" src="img/meeresschildkroete.jpg" alt="سلحفاة">
         <p class="text-center text-break fs-4">دون مزيد من اللغط ، دعنا نتعمق في الجزء المثير للاهتمام: البيانات الخاصة بأكبر الشركات في البلدان التي لديها أعلى انبعاثات غازات الاحتباس الحراري وانبعاثاتها السنوية من ثاني أكسيد الكربون.</p>
       </section>
       <div class="h1 text-center">الطاولة</div>
@@ -316,7 +316,7 @@
         </article>
       </section>
       <section>
-        <img class="img-fluid mx-auto d-block" src="/img/landschaft.jpg" alt="طبيعيه">
+        <img class="img-fluid mx-auto d-block" src="img/landschaft.jpg" alt="طبيعيه">
         <p class="text-center text-break fs-4">نأمل أن تلقي هذه البيانات بعض الضوء على انبعاثات غازات الاحتباس الحراري في جميع أنحاء العالم. دعونا نعمل جميعًا معًا من أجل مستقبل مستدام لأن هذا الكوكب يستحق القتال من أجله!</p>
       </section>
     </main>
