--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#footer">Footer</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/climate-history.html">Climate History</a>
+              </li>
             </ul>
           </div>
         </div>
