--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="pages/climate-history.html">Climate History</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/contact.html">Contact</a>
+              </li>
             </ul>
           </div>
         </div>
