--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green World - Togehter for a Greener World</title>
     <!-- CSS & Logo -->
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="icon" type="image/x-icon" href="./img/logo_compressed.png">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="icon" type="image/x-icon" href="../img/logo_compressed.png">
+    <link rel="stylesheet" href="../css/styles.css">
     <!-- Bootstrap & Data Table -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css">
@@ -21,7 +22,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <!-- Google reCAPTCHA -->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-
   </head>
   <body>
     <!-- Header -->
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/climate-history.html">Climate History</a>
+                <a class="nav-link" href="./climate-history.html">Climate History</a>
               </li>
             </ul>
           </div>
