Small bug fixes

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <a class="nav-link" href="#footer">Footer</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/climate-history.html">Climate History</a>
+                <a class="nav-link" href="./pages/climate-history.html">Climate History</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/contact.html">Contact</a>
+                <a class="nav-link" href="./pages/contact.html">Contact</a>
               </li>
             </ul>
           </div>
