--- a/pages/contact.html
+++ b/pages/contact.html
@@ -146,6 +146,7 @@
         </div>
       </section>
     </footer>
+    <script src="https://www.google.com/recaptcha/api.js?hl=en" async defer></script>
     <script>
       document.getElementById("contactForm").addEventListener("submit", function(event) {
         event.preventDefault();
