--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@
     <script src="//cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <!-- Google reCAPTCHA -->
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://www.google.com/recaptcha/api.js?hl=en" async defer></script>
   </head>
   <body>
     <!-- Header -->
@@ -53,19 +53,20 @@
     
     <!-- Main Content -->
     <main>
-      <section id="mission">
-        <img class="img-fluid mx-auto d-block" src="../img/natur.jpg" alt="Nature">
-        <div class="h1 text-center">Our Mission</div>
-        <p class="text-center text-break fs-4">Founded more than two years ago, our non-profit organization was created to help both individuals and businesses adopt more environmentally sustainable practices. Our mission is to reduce the collective CO2 footprints of organizations of all sizes by providing easy access to accurate and up-to-date data on their regional emissions output. We also strive to inform, educate, and inspire companies to become better stewards of the environment. To this end, we have developed innovative tools and platforms that enable companies to track their emissions levels accurately over time, allowing them to better evaluate and understand their eco footprint, so they can make positive changes. Our team consists of highly qualified experts with a wide range of knowledge in environmental science, engineering, business strategy, data analytics and research methods who work together in a collaborative environment driven by ambition and passion for making the world a better place. </p>
-        <p class="text-center text-break fs-4">We are constantly looking for new opportunities to drive innovation and create meaningful relationships with organizations from all sectors, as well as engaging them in discussions about global warming prevention initiatives. As part of our commitment to corporate social responsibility, we also offer educational programs for employees from various industries which focus on understanding climate change trends, reducing personal carbon footprints, best practices for green living, renewable energy sources and more.</p>
-        <img class="img-fluid mx-auto d-block" src="../img/meeresschildkroete.jpg" alt="Sea Turtle">
-        <p class="text-center text-break fs-4">Without furder ado, let's dive into the interesting part: The data about the biggest companies of countries with the highest greenhouse gas emissions and their annual CO2 emissions.</p>
-      </section>
+      <section id="contact-text">
+        <div class="h1 text-center">Get in Touch</div>
+        <p class="text-center text-break fs-4">
+          We appreciate your interest in our environmental NGO and our mission to promote sustainable practices. If you have any questions, concerns, or suggestions, please don't hesitate to reach out to us through the contact form below. We value your input and will do our best to respond to your message as soon as possible.
+        </p>
+        <p class="text-center text-break fs-4">
+          Your involvement and support are crucial in our journey towards a cleaner and more sustainable future. Together, we can make a difference and help preserve our planet for future generations.
+        </p>
+     </section>
       <!-- Contact Form -->
       <div class="h1 text-center">Contact</div>
       <section id="contact-form">
         <div class="container">
-          <div class="row">
+                  <div class="row">
             <div class="col-md-8 offset-md-2">
               <form action="submit_form.php" method="post" id="contactForm">
                 <div class="form-group">
@@ -146,7 +147,6 @@
         </div>
       </section>
     </footer>
-    <script src="https://www.google.com/recaptcha/api.js?hl=en" async defer></script>
     <script>
       document.getElementById("contactForm").addEventListener("submit", function(event) {
         event.preventDefault();
