--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green World - Togehter for a Greener World</title>
-    <!-- CSS & Logo -->
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="icon" type="image/x-icon" href="./img/logo_compressed.png">
     <!-- Bootstrap & Data Table -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css">
@@ -19,6 +16,9 @@
     <script src="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
     <script src="//cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <!-- CSS & Logo -->
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="icon" type="image/x-icon" href="./img/logo_compressed.png">
 
   </head>
   <body>
@@ -38,19 +38,21 @@
                 <a class="nav-link" href="/index_rtl.html">عربي</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#mission">Mission</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#table">Table</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#footer">Footer</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="./pages/climate-history.html">Climate History</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./pages/contact.html">Contact</a>
+              </li>
+              <!-- Local Links Dropdown Container -->
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Start
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#mission">Mission</a></li>
+                  <li><a class="dropdown-item" href="#table">Table</a></li>
+                  <li><a class="dropdown-item" href="#footer">Footer</a></li>
+                </ul>
               </li>
             </ul>
           </div>
